k8s-manifests/admin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin-server
  name: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
        - image: 116981792309.dkr.ecr.eu-west-3.amazonaws.com/petclinic:admin-server
          name: admin-server
          ports:
            - containerPort: 9090
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
