k8s-manifests/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - image: 116981792309.dkr.ecr.eu-west-3.amazonaws.com/petclinic:api-gateway
          name: api-gateway
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
