k8s-manifests/cloudwatch-agent-daemonset.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-cloudwatch

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cloudwatch-agent
  namespace: amazon-cloudwatch
  labels:
    k8s-app: cloudwatch-agent
spec:
  selector:
    matchLabels:
      name: cloudwatch-agent
  template:
    metadata:
      labels:
        name: cloudwatch-agent
    spec:
      serviceAccountName: cloudwatch-agent
      containers:
        - name: cloudwatch-agent
          image: public.ecr.aws/cloudwatch-agent/cloudwatch-agent:latest
          resources:
            limits:
              memory: 200Mi
              cpu: 200m
            requests:
              memory: 200Mi
              cpu: 200m
          volumeMounts:
            - name: cwagentconfig
              mountPath: /etc/cwagentconfig
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: varlibdocker
              mountPath: /var/lib/docker
              readOnly: true
            - name: varlog
              mountPath: /var/log
              readOnly: true
      volumes:
        - name: cwagentconfig
          configMap:
            name: cloudwatch-agent-config
        - name: rootfs
          hostPath:
            path: /
        - name: varlibdocker
          hostPath:
            path: /var/lib/docker
        - name: varlog
          hostPath:
            path: /var/log
