k8s-manifests/discovery-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: discovery-server
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  strategy: {}
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - image: 116981792309.dkr.ecr.eu-west-3.amazonaws.com/petclinic:discovery-server
          name: discovery-server
          ports:
            - containerPort: 8761
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
