k8s-manifests/vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vets-service
  name: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
        - image: 116981792309.dkr.ecr.eu-west-3.amazonaws.com/petclinic:vets-service
          name: vets-service
          ports:
            - containerPort: 8083
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
