k8s-manifests/admin-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin-server
  name: admin-server
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    app: admin-server
