k8s-manifests/discovery-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: discovery-server
  name: discovery-server
spec:
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    app: discovery-server
