k8s-manifests/vets-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vets-service
  name: vets-service
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    app: vets-service
