k8s-manifests/visits-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: visits-service
  name: visits-service
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: visits-service
