k8s-manifests/customers-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customers-service-ingress
  namespace: petclinic
  labels:
    app: customers-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /owners
spec:
  ingressClassName: nginx
  rules:
    - host: www.petclinic-devops.fr
      http:
        paths:
          - path: /api/customer
            pathType: Prefix
            backend:
              service:
                name: customers-service
                port:
                  number: 8081
