k8s-manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: petclinic  # Mets le même namespace que Grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /monitoring/grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
