k8s-manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: petclinic  # Mets le même namespace que Prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /monitoring/prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
