k8s-manifests/vets-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vets-service-ingress
  namespace: petclinic
  labels:
    app: vets-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/vet(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vets-service
                port:
                  number: 8083
