k8s-manifests/visits-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visits-service-ingress
  namespace: petclinic
  labels:
    app: visits-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.petclinic-devops.fr
      http:
        paths:
          - path: /pets/visits
            pathType: Prefix
            backend:
              service:
                name: visits-service
                port:
                  number: 8082
